style.css
/*font-family: 'Lobster', cursive;
font-family: 'Poppins', sans-serif;
font-family: 'Yeseva One', cursive;*/
body{
    font-family: 'Poppins', sans-serif;
}
.flex{
    display: flex;
    padding: 2% 10%;
    
}
.half-width{
    width: 50%;
}
.half-width img{
    width: 90%;
}
.heading{
    font-family: 'Yeseva One', cursive;
    font-size: 40px;
    line-height: 90%;
    border-left: 5px solid #EF5DA8;
    padding-left: 7px;
    letter-spacing: 5px;
    margin-top: 150px;
}
.pink-color{
    color: #EF5DA8;
}
.link-btn{
    text-decoration: none;
    background-color: #EF5DA8;
    padding: 10px 40px;
    border-radius: 5px;
    color: #fff;
    margin-bottom: 50px;
    
}
.mission-area h2{
    text-align: center;
}
.card{
    width: 30%;
    padding: 50px 20px;
    border-radius: 20px;
    margin-right: 20px;
}
.card img{
    width: 30%;
}
.mission{
    background-color: #4f9da61a;
}
.vission{
    background-color: #FF59591A;
}
.goals{
    background-color: #FFF4D6;
}
.img-item{
    width:35%;
}
.img-item img{
    width: 80%;
}
.content-item{
    width: 60%;
}
h2{
    font-size: 30px;
    line-height: 70%;
}
.develop-area{
    background-image: url(images/shapes/shape-1.png);
    background-repeat: no-repeat;
    background-size: 12%;
    background-position: 70px 80px;
}
.community-area{
    background-image: url(images/shapes/shape-1.png);
    background-repeat: no-repeat;
    background-size: 12%;
    background-position: right 220px bottom;
    padding-bottom: 4%;
}
footer{
    padding: 50px;
    background-color: black;
}
footer h1{
    font-family: 'Lobster', cursive;
    color: #fff;
    text-align: center;
}
footer p{
    color: gray;
    text-align: center;
}

